# SQL-Debugger-Env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py  requirements.txt
server/episodes/: 5657c178-2515-4249-9a29-e45600757818.db  af9a07ec-7e11-418a-9235-1ac89b5a7576.db
